# arm_gdb

./: LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-publish.yml  publish-to-test-pypi.yml
arm_gdb/: __init__.py  common.py  fpu.py  lib.py  mpu.py  nvic.py  scb.py  svd.py  systick.py
